# cryptodivlinbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.placeholder.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: cryptodivlinbot.service
docs/: PRIVACY_POLICY.md  PRIVACY_POLICY_RU.md  PRIVACY_POLICY_UK.md  TERMS_OF_SERVICE.md  TERMS_OF_SERVICE_RU.md  TERMS_OF_SERVICE_UK.md  USAGE_RU.md  USAGE_UK.md
src/cryptodivlinbot/: __init__.py  __main__.py  alerts.py  backup.py  bot.py  config.py  i18n.py  keyboards.py  market_data.py  monitoring.py  state.py
src/cryptodivlinbot/handlers/: __init__.py  callbacks.py  commands.py
tests/: test_alerts.py  test_backup.py  test_bot_helpers.py  test_broadcast.py  test_config.py  test_i18n.py  test_keyboards.py  test_market_data.py  test_monitoring.py  test_privacy_commands.py  test_safe_send.py  test_state.py  test_systemd_unit.py
