[project]
name = "cryptodivlinbot"
version = "0.1.0"
description = "Telegram bot that tracks the top-N cryptocurrencies and alerts on price spikes."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0,<22.0",
    "httpx>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.11.0,<2.0.0",
]

[project.scripts]
cryptodivlinbot = "cryptodivlinbot.bot:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cryptodivlinbot"]
# python-telegram-bot ships type info for most of its API but a few private
# helpers we touch are loosely typed; allow those targeted ignores rather than
# globally disabling strict mode.
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
# httpx's transport types include some Any-returning protocols; we already
# confine that to market_data.py and don't propagate it.
module = "cryptodivlinbot.market_data"
disallow_any_decorated = false

